crates/templates/tests/snapshots/usage_test__render-5.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n\n"
  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n"
  printf "\nOptions:\n"
  printf "  -d --default\n"
  printf "    Test default option\n"
  printf "    [@default foo]\n"
}

