crates/templates/tests/snapshots/usage_test__render-7.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n\n"
  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n\n"
  printf "Options:\n"
  printf "  -rm --required\n"
  printf "    Test required and multiple option\n"
  printf "    [@required, @multiple]\n"
}

