crates/templates/tests/snapshots/usage_test__render-8.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n\n"
  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n"
  printf "\nOptions:\n"
  printf "  -dm --default\n"
  printf "    Test default and multiple option\n"
  printf "    [@multiple, @default foo]\n"
}

