crates/templates/tests/snapshots/usage_test__render-9.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n\n"
  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n"
  printf "\nFlags:\n"
  printf "  -s --short\n"
  printf "    Test short flag\n"
  printf "  --verbose\n"
  printf "    Test verbose flag\n"
  printf "\nOptions:\n"
  printf "  -cm --choices\n"
  printf "    Test option with choices and multiple\n"
  printf "    [@multiple, @choices foo, bar, baz]\n"
}

